# Web-Search-Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  README_GRADIO.md  docker-compose.yml  gradio_app.py  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
src/: __init__.py  logging_config.py  main.py
src/agents/: __init__.py  base_agent.py  calculator_agent.py  general_agent.py  router_agent.py  search_agent.py  story_agent.py
src/memory/: __init__.py
src/routers/: __init__.py  agent_router.py
src/schemas/: __init__.py  agent_schema.py
src/services/: __init__.py  agent_service.py  langsmith_service.py
src/templates/: __init__.py
src/tools/: __init__.py  calculator_tool.py  search_tool.py  story_tool.py  tool_registry.py
