[tool.poetry]
name = "langchain-agent"
version = "0.1.0"
description = "AI Agent with LangChain and LangSmith integration"
authors = ["Julio Díaz"]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langsmith = "^0.1.17"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
search-web = "^0.1.6"
serpapi = "0.1.5"
gradio = "^4.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"