[tool.poetry]
name = "langchain-agent"
version = "0.1.0"
description = "AI Agent with LangChain and LangSmith integration"
authors = ["Julio Díaz"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langsmith = "^0.1.17"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
serpapi = "0.1.5"
gradio = "^4.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = ">=24.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"